--- a/FJSP/FJSP.vcxproj.filters
+++ b/FJSP/FJSP.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="fjsp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="TS_JSP.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
