Find the problem.

--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,4 @@ ModelManifest.xml
 .fake/
 /FJSP/TS_JSP.cpp
 /FJSP/solutions/ts_rcmax_30_15_1.txt
+/FJSP/solutions/best_solutions/dmu15_rcmax_30_15_1pb_3384.txt
